<resources>
    <string name="app_name">open2share</string>
    <string name="convert_text">Convert to share</string>
    <string name="guide">Usage</string>
    <string name="hide">Hide icon from launcher</string>
    <string name="about">About</string>
    <string name="about_title">About open2share</string>
    <string name="help">Help</string>
    <string name="settings">Settings</string>
    <string name="share_title">Share</string>
    <string name="warn">WARNING</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="hide_tips">1. After hiding, you may have to uninstall and reinstall to display the icon again.\n2. In some systems, hiding the desktop icon will cause this page to be closed, and it will be difficult for you to open this page again.\n3. Some systems do not support this function.\nDo you want to continue?</string>
    <string name="about_dialogue_title">About</string>
    <string name="about_dialogue_msg">Copyright ©️ LineSoft and Contributors.</string>
    <string name="ok">OK</string>
    <string name="website">Website</string>
    <string name="open_file_uri">compatible fileUri types</string>
    <string name="open_file_uri_msg">Android 7 and above, because security issues do not discourage the use of fileUri, therefore, turning on this option will consent to the security risk it brings</string>
    <string name="no_use_file_uri_msg">FileUri is not turned on</string>
</resources>
